# Zattoo-Remote

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
e2e/: .env.example  channel-navigation.spec.ts  test-harness.html  zattoo-login.spec.ts
src/: key-config.json  key-config.test.ts  main.test.ts  main.ts  styles.css  test-setup.ts  zattoo-bridge.test.ts  zattoo-bridge.ts  zattoo-inject.test.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: input_handler.rs  key_mapper.rs  lib.rs  main.rs  zattoo_controller.rs  zattoo_inject.js
src/__mocks__/: tauri-api.ts
