[package]
name = "zattoo-remote"
version = "1.0.0"
description = "Zattoo MX3 Remote Controller"
authors = ["Zattoo Remote Team"]
edition = "2021"

[lib]
name = "zattoo_remote_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
once_cell = "1"
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"

# Global input capture: rdev for macOS/Windows/Linux-X11, evdev for Linux-Wayland
[target.'cfg(target_os = "linux")'.dependencies]
rdev = "0.5"
evdev = "0.12"

[target.'cfg(not(target_os = "linux"))'.dependencies]
rdev = "0.5"
